--- a/output.css
+++ b/output.css
@@ -224,9 +224,6 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .-mt-7 {
-    margin-top: calc(var(--spacing) * -7);
-  }
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
   }
@@ -248,17 +245,23 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
+  .mr-1 {
+    margin-right: calc(var(--spacing) * 1);
+  }
+  .mr-5 {
+    margin-right: calc(var(--spacing) * 5);
+  }
   .mr-6 {
     margin-right: calc(var(--spacing) * 6);
+  }
+  .mr-7 {
+    margin-right: calc(var(--spacing) * 7);
   }
   .-mb-13 {
     margin-bottom: calc(var(--spacing) * -13);
   }
   .-mb-15 {
     margin-bottom: calc(var(--spacing) * -15);
-  }
-  .mb-0 {
-    margin-bottom: calc(var(--spacing) * 0);
   }
   .mb-0\! {
     margin-bottom: calc(var(--spacing) * 0) !important;
@@ -272,6 +275,9 @@
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
+  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
@@ -280,9 +286,6 @@
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
-  }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
   }
   .mb-10\! {
     margin-bottom: calc(var(--spacing) * 10) !important;
@@ -301,9 +304,6 @@
   }
   .mb-16 {
     margin-bottom: calc(var(--spacing) * 16);
-  }
-  .mb-19 {
-    margin-bottom: calc(var(--spacing) * 19);
   }
   .mb-19\.5 {
     margin-bottom: calc(var(--spacing) * 19.5);
@@ -350,9 +350,6 @@
   .hidden\! {
     display: none !important;
   }
-  .table {
-    display: table;
-  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
@@ -377,9 +374,6 @@
   .h-19 {
     height: calc(var(--spacing) * 19);
   }
-  .h-33 {
-    height: calc(var(--spacing) * 33);
-  }
   .h-33\.5\! {
     height: calc(var(--spacing) * 33.5) !important;
   }
@@ -401,23 +395,11 @@
   .h-181 {
     height: calc(var(--spacing) * 181);
   }
-  .max-h-\[900px\] {
-    max-height: 900px;
-  }
-  .max-h-\[920px\] {
-    max-height: 920px;
-  }
   .max-h-\[950px\] {
     max-height: 950px;
   }
-  .max-h-\[980px\] {
-    max-height: 980px;
-  }
   .w-8 {
     width: calc(var(--spacing) * 8);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
   }
   .w-10\! {
     width: calc(var(--spacing) * 10) !important;
@@ -428,29 +410,17 @@
   .w-18 {
     width: calc(var(--spacing) * 18);
   }
-  .w-30 {
-    width: calc(var(--spacing) * 30);
-  }
   .w-30\! {
     width: calc(var(--spacing) * 30) !important;
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
   }
-  .w-41 {
-    width: calc(var(--spacing) * 41);
-  }
   .w-41\.5 {
     width: calc(var(--spacing) * 41.5);
   }
-  .w-44 {
-    width: calc(var(--spacing) * 44);
-  }
   .w-44\.5 {
     width: calc(var(--spacing) * 44.5);
-  }
-  .w-46 {
-    width: calc(var(--spacing) * 46);
   }
   .w-46\.5 {
     width: calc(var(--spacing) * 46.5);
@@ -460,9 +430,6 @@
   }
   .w-74 {
     width: calc(var(--spacing) * 74);
-  }
-  .w-76 {
-    width: calc(var(--spacing) * 76);
   }
   .w-76\.5 {
     width: calc(var(--spacing) * 76.5);
@@ -542,9 +509,6 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .shrink-0 {
     flex-shrink: 0;
   }
@@ -554,17 +518,11 @@
   .basis-\[calc\(50\%-0\.375rem\)\] {
     flex-basis: calc(50% - 0.375rem);
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
   .-rotate-90 {
     rotate: calc(90deg * -1);
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -611,9 +569,6 @@
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
-  .gap-16 {
-    gap: calc(var(--spacing) * 16);
-  }
   .gap-16\.5 {
     gap: calc(var(--spacing) * 16.5);
   }
@@ -640,6 +595,9 @@
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
+  }
+  .rounded-\[25px\] {
+    border-radius: 25px;
   }
   .rounded-\[56px\] {
     border-radius: 56px;
@@ -674,10 +632,6 @@
     border-bottom-right-radius: 56px;
     border-bottom-left-radius: 56px;
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
@@ -711,6 +665,9 @@
   .bg-\[\#E8EBED\] {
     background-color: #E8EBED;
   }
+  .bg-\[\#F2F2F2\] {
+    background-color: #F2F2F2;
+  }
   .bg-\[\#F2F5F7\] {
     background-color: #F2F5F7;
   }
@@ -722,9 +679,6 @@
   }
   .object-cover {
     object-fit: cover;
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
   }
   .p-4\.5 {
     padding: calc(var(--spacing) * 4.5);
@@ -762,9 +716,6 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
-  .py-7 {
-    padding-block: calc(var(--spacing) * 7);
-  }
   .py-7\.5 {
     padding-block: calc(var(--spacing) * 7.5);
   }
@@ -780,9 +731,6 @@
   .py-40 {
     padding-block: calc(var(--spacing) * 40);
   }
-  .py-42 {
-    padding-block: calc(var(--spacing) * 42);
-  }
   .py-42\.5 {
     padding-block: calc(var(--spacing) * 42.5);
   }
@@ -792,23 +740,14 @@
   .pt-19 {
     padding-top: calc(var(--spacing) * 19);
   }
-  .pt-22 {
-    padding-top: calc(var(--spacing) * 22);
-  }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
   }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
   }
-  .pt-42 {
-    padding-top: calc(var(--spacing) * 42);
-  }
   .pt-42\.5 {
     padding-top: calc(var(--spacing) * 42.5);
-  }
-  .pr-46 {
-    padding-right: calc(var(--spacing) * 46);
   }
   .pr-46\.25 {
     padding-right: calc(var(--spacing) * 46.25);
@@ -828,9 +767,6 @@
   .pb-18 {
     padding-bottom: calc(var(--spacing) * 18);
   }
-  .pl-10 {
-    padding-left: calc(var(--spacing) * 10);
-  }
   .pl-10\! {
     padding-left: calc(var(--spacing) * 10) !important;
   }
@@ -840,14 +776,8 @@
   .pl-15 {
     padding-left: calc(var(--spacing) * 15);
   }
-  .text-center {
-    text-align: center;
-  }
   .text-center\! {
     text-align: center !important;
-  }
-  .text-start {
-    text-align: start;
   }
   .text-start\! {
     text-align: start !important;
@@ -860,10 +790,6 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
-  .text-base {
-    font-size: var(--text-base);
-    line-height: var(--tw-leading, var(--text-base--line-height));
-  }
   .text-base\! {
     font-size: var(--text-base) !important;
     line-height: var(--tw-leading, var(--text-base--line-height)) !important;
@@ -871,10 +797,6 @@
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
-  }
-  .text-sm {
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .text-sm\! {
     font-size: var(--text-sm) !important;
@@ -890,6 +812,9 @@
   }
   .text-\[1\.75rem\] {
     font-size: 1.75rem;
+  }
+  .text-\[1\.375rem\] {
+    font-size: 1.375rem;
   }
   .text-\[2rem\] {
     font-size: 2rem;
@@ -910,6 +835,10 @@
   .leading-7 {
     --tw-leading: calc(var(--spacing) * 7);
     line-height: calc(var(--spacing) * 7);
+  }
+  .leading-7\.5 {
+    --tw-leading: calc(var(--spacing) * 7.5);
+    line-height: calc(var(--spacing) * 7.5);
   }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
@@ -945,35 +874,12 @@
   .text-white\! {
     color: var(--color-white) !important;
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  .filter {
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .max-\[768ox\]\:w-82 {
     @media (width < 768ox) {
       width: calc(var(--spacing) * 82);
-    }
-  }
-  .max-\[3000px\]\:max-h-\[650px\] {
-    @media (width < 3000px) {
-      max-height: 650px;
-    }
-  }
-  .max-\[3000px\]\:max-h-\[950px\] {
-    @media (width < 3000px) {
-      max-height: 950px;
     }
   }
   .max-\[1920px\]\:h-160 {
@@ -1061,6 +967,11 @@
       margin-bottom: calc(var(--spacing) * 10);
     }
   }
+  .max-\[1440px\]\:mb-12 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 12);
+    }
+  }
   .max-\[1440px\]\:mb-15 {
     @media (width < 1440px) {
       margin-bottom: calc(var(--spacing) * 15);
@@ -1139,16 +1050,6 @@
   .max-\[1440px\]\:h-110 {
     @media (width < 1440px) {
       height: calc(var(--spacing) * 110);
-    }
-  }
-  .max-\[1440px\]\:max-h-\[600px\] {
-    @media (width < 1440px) {
-      max-height: 600px;
-    }
-  }
-  .max-\[1440px\]\:max-h-\[800px\] {
-    @media (width < 1440px) {
-      max-height: 800px;
     }
   }
   .max-\[1440px\]\:max-h-\[850px\] {
@@ -2378,6 +2279,11 @@
       padding: calc(var(--spacing) * 4);
     }
   }
+  .max-\[768px\]\:p-5 {
+    @media (width < 768px) {
+      padding: calc(var(--spacing) * 5);
+    }
+  }
   .max-\[768px\]\:px-4 {
     @media (width < 768px) {
       padding-inline: calc(var(--spacing) * 4);
@@ -3005,44 +2911,56 @@ button {
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-backdrop-blur {
+@property --tw-blur {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-brightness {
+@property --tw-brightness {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-contrast {
+@property --tw-contrast {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-grayscale {
+@property --tw-grayscale {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-hue-rotate {
+@property --tw-hue-rotate {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-invert {
+@property --tw-invert {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-opacity {
+@property --tw-opacity {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-saturate {
+@property --tw-saturate {
   syntax: "*";
   inherits: false;
 }
-@property --tw-backdrop-sepia {
+@property --tw-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-drop-shadow-size {
   syntax: "*";
   inherits: false;
 }
@@ -3057,16 +2975,19 @@ button {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
-      --tw-backdrop-blur: initial;
-      --tw-backdrop-brightness: initial;
-      --tw-backdrop-contrast: initial;
-      --tw-backdrop-grayscale: initial;
-      --tw-backdrop-hue-rotate: initial;
-      --tw-backdrop-invert: initial;
-      --tw-backdrop-opacity: initial;
-      --tw-backdrop-saturate: initial;
-      --tw-backdrop-sepia: initial;
+      --tw-blur: initial;
+      --tw-brightness: initial;
+      --tw-contrast: initial;
+      --tw-grayscale: initial;
+      --tw-hue-rotate: initial;
+      --tw-invert: initial;
+      --tw-opacity: initial;
+      --tw-saturate: initial;
+      --tw-sepia: initial;
+      --tw-drop-shadow: initial;
+      --tw-drop-shadow-color: initial;
+      --tw-drop-shadow-alpha: 100%;
+      --tw-drop-shadow-size: initial;
     }
   }
 }
