--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   .about-image {
     width: 100%;
     max-width: none;
-    height: auto !important;
+    height: 690px;
     object-fit: cover;
     display: block;
   }
@@ -449,6 +449,19 @@ button {
 
 .menu-arrow {
   font-size: 14px;
+}
+
+.service-card {
+  text-decoration: none;
+  color: inherit;
+}
+.service-card-arrow {
+  filter: brightness(0) saturate(100%) invert(27%) sepia(69%)
+    saturate(3612%) hue-rotate(343deg) brightness(93%) contrast(93%);
+}
+.service-card:hover .service-card-arrow {
+  transform: translateY(-2px);
+  transition: transform 0.2s ease;
 }
 
 .no-scroll {
