--- a/output.css
+++ b/output.css
@@ -233,6 +233,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .-mt-7 {
+    margin-top: calc(var(--spacing) * -7);
+  }
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
   }
@@ -275,6 +278,9 @@
   .-mb-15 {
     margin-bottom: calc(var(--spacing) * -15);
   }
+  .mb-0 {
+    margin-bottom: calc(var(--spacing) * 0);
+  }
   .mb-0\! {
     margin-bottom: calc(var(--spacing) * 0) !important;
   }
@@ -299,6 +305,9 @@
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
   .mb-10\! {
     margin-bottom: calc(var(--spacing) * 10) !important;
   }
@@ -316,6 +325,9 @@
   }
   .mb-16 {
     margin-bottom: calc(var(--spacing) * 16);
+  }
+  .mb-19 {
+    margin-bottom: calc(var(--spacing) * 19);
   }
   .mb-19\.5 {
     margin-bottom: calc(var(--spacing) * 19.5);
@@ -362,6 +374,9 @@
   .hidden\! {
     display: none !important;
   }
+  .table {
+    display: table;
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
@@ -385,6 +400,9 @@
   }
   .h-19 {
     height: calc(var(--spacing) * 19);
+  }
+  .h-33 {
+    height: calc(var(--spacing) * 33);
   }
   .h-33\.5\! {
     height: calc(var(--spacing) * 33.5) !important;
@@ -416,6 +434,9 @@
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
   .w-10\! {
     width: calc(var(--spacing) * 10) !important;
   }
@@ -425,11 +446,17 @@
   .w-18 {
     width: calc(var(--spacing) * 18);
   }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
   .w-30\! {
     width: calc(var(--spacing) * 30) !important;
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
+  }
+  .w-41 {
+    width: calc(var(--spacing) * 41);
   }
   .w-41\.5 {
     width: calc(var(--spacing) * 41.5);
@@ -437,8 +464,14 @@
   .w-42 {
     width: calc(var(--spacing) * 42);
   }
+  .w-44 {
+    width: calc(var(--spacing) * 44);
+  }
   .w-44\.5 {
     width: calc(var(--spacing) * 44.5);
+  }
+  .w-46 {
+    width: calc(var(--spacing) * 46);
   }
   .w-46\.5 {
     width: calc(var(--spacing) * 46.5);
@@ -448,6 +481,9 @@
   }
   .w-74 {
     width: calc(var(--spacing) * 74);
+  }
+  .w-76 {
+    width: calc(var(--spacing) * 76);
   }
   .w-76\.5 {
     width: calc(var(--spacing) * 76.5);
@@ -527,6 +563,9 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .shrink-0 {
     flex-shrink: 0;
   }
@@ -536,6 +575,9 @@
   .basis-\[calc\(50\%-0\.375rem\)\] {
     flex-basis: calc(50% - 0.375rem);
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .-rotate-90 {
     rotate: calc(90deg * -1);
   }
@@ -544,6 +586,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -589,6 +634,9 @@
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
+  }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
   }
   .gap-16\.5 {
     gap: calc(var(--spacing) * 16.5);
@@ -653,6 +701,10 @@
     border-bottom-right-radius: 56px;
     border-bottom-left-radius: 56px;
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
@@ -701,6 +753,9 @@
   .object-cover {
     object-fit: cover;
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .p-4\.5 {
     padding: calc(var(--spacing) * 4.5);
   }
@@ -737,6 +792,9 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
+  .py-7 {
+    padding-block: calc(var(--spacing) * 7);
+  }
   .py-7\.5 {
     padding-block: calc(var(--spacing) * 7.5);
   }
@@ -752,6 +810,9 @@
   .py-40 {
     padding-block: calc(var(--spacing) * 40);
   }
+  .py-42 {
+    padding-block: calc(var(--spacing) * 42);
+  }
   .py-42\.5 {
     padding-block: calc(var(--spacing) * 42.5);
   }
@@ -761,14 +822,23 @@
   .pt-19 {
     padding-top: calc(var(--spacing) * 19);
   }
+  .pt-22 {
+    padding-top: calc(var(--spacing) * 22);
+  }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
   }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
   }
+  .pt-42 {
+    padding-top: calc(var(--spacing) * 42);
+  }
   .pt-42\.5 {
     padding-top: calc(var(--spacing) * 42.5);
+  }
+  .pr-46 {
+    padding-right: calc(var(--spacing) * 46);
   }
   .pr-46\.25 {
     padding-right: calc(var(--spacing) * 46.25);
@@ -788,6 +858,9 @@
   .pb-18 {
     padding-bottom: calc(var(--spacing) * 18);
   }
+  .pl-10 {
+    padding-left: calc(var(--spacing) * 10);
+  }
   .pl-10\! {
     padding-left: calc(var(--spacing) * 10) !important;
   }
@@ -797,8 +870,14 @@
   .pl-15 {
     padding-left: calc(var(--spacing) * 15);
   }
+  .text-center {
+    text-align: center;
+  }
   .text-center\! {
     text-align: center !important;
+  }
+  .text-start {
+    text-align: start;
   }
   .text-start\! {
     text-align: start !important;
@@ -811,6 +890,10 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
+  }
   .text-base\! {
     font-size: var(--text-base) !important;
     line-height: var(--tw-leading, var(--text-base--line-height)) !important;
@@ -818,6 +901,10 @@
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .text-sm\! {
     font-size: var(--text-sm) !important;
@@ -895,12 +982,23 @@
   .text-white\! {
     color: var(--color-white) !important;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .blur {
     --tw-blur: blur(8px);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -1026,6 +1124,11 @@
       margin-bottom: calc(var(--spacing) * 12);
     }
   }
+  .max-\[1440px\]\:mb-12\.5 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 12.5);
+    }
+  }
   .max-\[1440px\]\:mb-15 {
     @media (width < 1440px) {
       margin-bottom: calc(var(--spacing) * 15);
@@ -1034,6 +1137,11 @@
   .max-\[1440px\]\:mb-20 {
     @media (width < 1440px) {
       margin-bottom: calc(var(--spacing) * 20);
+    }
+  }
+  .max-\[1440px\]\:mb-22\.5 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 22.5);
     }
   }
   .max-\[1440px\]\:mb-25 {
@@ -1609,6 +1717,11 @@
       margin-bottom: calc(var(--spacing) * 5);
     }
   }
+  .max-\[1024px\]\:mb-5\.5 {
+    @media (width < 1024px) {
+      margin-bottom: calc(var(--spacing) * 5.5);
+    }
+  }
   .max-\[1024px\]\:mb-6 {
     @media (width < 1024px) {
       margin-bottom: calc(var(--spacing) * 6);
@@ -1622,6 +1735,11 @@
   .max-\[1024px\]\:mb-16 {
     @media (width < 1024px) {
       margin-bottom: calc(var(--spacing) * 16);
+    }
+  }
+  .max-\[1024px\]\:mb-20 {
+    @media (width < 1024px) {
+      margin-bottom: calc(var(--spacing) * 20);
     }
   }
   .max-\[1024px\]\:block {
@@ -2036,6 +2154,11 @@
       margin-bottom: calc(var(--spacing) * 20);
     }
   }
+  .max-\[768px\]\:ml-5 {
+    @media (width < 768px) {
+      margin-left: calc(var(--spacing) * 5);
+    }
+  }
   .max-\[768px\]\:block {
     @media (width < 768px) {
       display: block;
@@ -2366,6 +2489,11 @@
   .max-\[768px\]\:p-5 {
     @media (width < 768px) {
       padding: calc(var(--spacing) * 5);
+    }
+  }
+  .max-\[768px\]\:px-0 {
+    @media (width < 768px) {
+      padding-inline: calc(var(--spacing) * 0);
     }
   }
   .max-\[768px\]\:px-4 {
@@ -3049,6 +3177,15 @@ button {
 .truck-card:not(.active) p {
   color: #3a3a3a99 !important;
 }
+.tab-btn {
+  background: #f2f5f7;
+  color: #3a3a3a;
+  transition: all 0.2s ease;
+}
+.tab-btn.active {
+  background: #3a3a3a;
+  color: #fff;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -3081,6 +3218,11 @@ button {
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-blur {
   syntax: "*";
@@ -3135,6 +3277,42 @@ button {
   syntax: "*";
   inherits: false;
 }
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -3146,6 +3324,7 @@ button {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -3159,6 +3338,15 @@ button {
       --tw-drop-shadow-color: initial;
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
     }
   }
 }
