--- a/css/output.css
+++ b/css/output.css
@@ -245,11 +245,26 @@
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
   }
+  .-mt-12 {
+    margin-top: calc(var(--spacing) * -12);
+  }
   .-mt-13 {
     margin-top: calc(var(--spacing) * -13);
   }
+  .-mt-14 {
+    margin-top: calc(var(--spacing) * -14);
+  }
+  .-mt-17 {
+    margin-top: calc(var(--spacing) * -17);
+  }
   .-mt-18 {
     margin-top: calc(var(--spacing) * -18);
+  }
+  .-mt-22 {
+    margin-top: calc(var(--spacing) * -22);
+  }
+  .-mt-22\.5 {
+    margin-top: calc(var(--spacing) * -22.5);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -449,6 +464,9 @@
   .h-185 {
     height: calc(var(--spacing) * 185);
   }
+  .h-\[48px\] {
+    height: 48px;
+  }
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
@@ -532,6 +550,9 @@
   }
   .w-\[18rem\] {
     width: 18rem;
+  }
+  .w-\[75px\] {
+    width: 75px;
   }
   .w-\[350px\] {
     width: 350px;
@@ -889,17 +910,23 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
-  .pt-19 {
-    padding-top: calc(var(--spacing) * 19);
-  }
-  .pt-20 {
-    padding-top: calc(var(--spacing) * 20);
-  }
   .pt-22 {
     padding-top: calc(var(--spacing) * 22);
   }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
+  }
+  .pt-24 {
+    padding-top: calc(var(--spacing) * 24);
+  }
+  .pt-32 {
+    padding-top: calc(var(--spacing) * 32);
+  }
+  .pt-32\.5 {
+    padding-top: calc(var(--spacing) * 32.5);
+  }
+  .pt-34 {
+    padding-top: calc(var(--spacing) * 34);
   }
   .pt-39 {
     padding-top: calc(var(--spacing) * 39);
@@ -1116,6 +1143,11 @@
   .max-\[1920px\]\:h-160 {
     @media (width < 1920px) {
       height: calc(var(--spacing) * 160);
+    }
+  }
+  .max-\[1920px\]\:max-h-\[80vh\] {
+    @media (width < 1920px) {
+      max-height: 80vh;
     }
   }
   .max-\[1920px\]\:max-h-\[87vh\] {
@@ -2910,6 +2942,68 @@ body {
     display: none;
   }
 }
+.dropdown {
+  position: relative;
+}
+.dropdown-trigger img {
+  transition: transform 0.2s ease;
+}
+.dropdown-menu {
+  position: absolute;
+  top: 250%;
+  left: 0;
+  width: max-content;
+  white-space: nowrap;
+  min-width: unset;
+  background: #3a3a3a;
+  border-radius: 24px;
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(6px);
+  transition: all 0.2s ease;
+  z-index: 10;
+}
+.dropdown-menu a:hover {
+  background: rgba(255, 255, 255, 0.08);
+}
+.dropdown.active .dropdown-menu {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+.dropdown.active .dropdown-trigger img {
+  transform: rotate(180deg);
+}
+.menu-screen {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  transform: translateX(100%);
+  transition: transform 0.35s ease;
+  top: 35%;
+  padding: 0 20px;
+}
+.menu-screen.active {
+  transform: translateX(0);
+}
+.menu-main.hide {
+  transform: translateX(-100%);
+}
+.menu-back {
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: -3%;
+  color: #ffffff99;
+  top: -23%;
+}
 button {
   cursor: pointer;
 }
@@ -3019,9 +3113,9 @@ button {
 .contact_section::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  top: 8%;
+  left: -3.3%;
+  width: 113%;
   height: 100%;
   background-image: url("../assets/icons/formLine.svg");
   background-size: 100% auto;
@@ -3029,9 +3123,10 @@ button {
   background-repeat: no-repeat;
   z-index: 1;
   @media (max-width: 1440px) {
-    background-position: 0% 20%;
-    width: 185%;
-    height: 185%;
+    background-position: 0% 30%;
+    width: 220%;
+    height: 110%;
+    top: -10%;
   }
   @media (max-width: 768px) {
     background-position: 0% 20%;
@@ -3047,10 +3142,10 @@ button {
 .footer_section::before {
   content: "";
   position: absolute;
-  top: 0px;
-  right: -0px;
-  width: 90%;
-  height: 100%;
+  top: -23%;
+  right: -11%;
+  width: 105%;
+  height: 115%;
   background-image: url("../assets/icons/footerLine.svg");
   background-size: 100% auto;
   background-position: top right;
@@ -3058,14 +3153,14 @@ button {
   pointer-events: none;
   z-index: 1;
   @media (max-width: 1440px) {
-    width: 180%;
+    width: 190%;
     height: 180%;
     background-size: 100% auto;
-    top: -50px;
-    right: -650px;
+    top: -23%;
+    right: -73%;
     background-position: top right;
   }
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     width: 250%;
     height: 250%;
     background-size: contain;
@@ -3194,10 +3289,10 @@ button {
   .footer_section_mobile::before {
     content: "";
     position: absolute;
-    top: 0px;
-    right: 0px;
-    width: 100%;
-    height: 100%;
+    top: -34%;
+    right: -50%;
+    width: 175%;
+    height: 180%;
     background-image: url("../assets/icons/footerLineMobile.svg");
     background-size: 100% auto;
     background-position: top right;
