--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,81 @@ body {
   }
 }
 
+.dropdown {
+  position: relative;
+}
+
+.dropdown-trigger img {
+  transition: transform 0.2s ease;
+}
+
+/* меню */
+.dropdown-menu {
+  position: absolute;
+  top: 250%;
+  left: 0;
+  width: max-content;
+  white-space: nowrap;
+  min-width: unset;
+  background: #3a3a3a;
+  border-radius: 24px;
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(6px);
+  transition: all 0.2s ease;
+
+  z-index: 10;
+}
+
+.dropdown-menu a:hover {
+  background: rgba(255, 255, 255, 0.08);
+}
+
+/* открыто */
+.dropdown.active .dropdown-menu {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.dropdown.active .dropdown-trigger img {
+  transform: rotate(180deg);
+}
+
+.menu-screen {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  transform: translateX(100%);
+  transition: transform 0.35s ease;
+  top: 35%;
+  padding: 0 20px;
+}
+
+.menu-screen.active {
+  transform: translateX(0);
+}
+
+.menu-main.hide {
+  transform: translateX(-100%);
+}
+
+.menu-back {
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: -3%;
+  color: #ffffff99;
+  top: -23%;
+}
+
 button {
   cursor: pointer;
 }
@@ -205,9 +280,9 @@ button {
 .contact_section::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  top: 8%;
+  left: -3.3%;
+  width: 113%;
   height: 100%;
   background-image: url("../assets/icons/formLine.svg");
   background-size: 100% auto;
@@ -215,9 +290,11 @@ button {
   background-repeat: no-repeat;
   z-index: 1;
   @media (max-width: 1440px) {
-    background-position: 0% 20%;
-    width: 185%;
-    height: 185%;
+    background-position: 0% 30%;
+    width: 220%;
+    height: 110%;
+
+    top: -10%;
   }
   @media (max-width: 768px) {
     background-position: 0% 20%;
@@ -235,10 +312,10 @@ button {
 .footer_section::before {
   content: "";
   position: absolute;
-  top: 0px;
-  right: -0px;
-  width: 90%;
-  height: 100%;
+  top: -23%;
+  right: -11%;
+  width: 105%;
+  height: 115%;
   background-image: url("../assets/icons/footerLine.svg");
   background-size: 100% auto;
   background-position: top right;
@@ -246,14 +323,14 @@ button {
   pointer-events: none;
   z-index: 1;
   @media (max-width: 1440px) {
-    width: 180%;
+    width: 190%;
     height: 180%;
     background-size: 100% auto;
-    top: -50px;
-    right: -650px;
+    top: -23%;
+    right: -73%;
     background-position: top right;
   }
-  @media (max-width: 1024px) {
+  @media (max-width: 1023px) {
     width: 250%;
     height: 250%;
     background-size: contain;
@@ -390,10 +467,10 @@ button {
   .footer_section_mobile::before {
     content: "";
     position: absolute;
-    top: 0px;
-    right: 0px;
-    width: 100%;
-    height: 100%;
+    top: -34%;
+    right: -50%;
+    width: 175%;
+    height: 180%;
     background-image: url("../assets/icons/footerLineMobile.svg");
     background-size: 100% auto;
     background-position: top right;
